--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ganache-cli": "^6.12.2",
     "mocha": "^9.2.2",
     "next": "^12.1.4",
+    "next-routes": "^1.4.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "semantic-ui-css": "^2.4.1",
