--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 .next/cache/webpack/client-development/4.pack filter=lfs diff=lfs merge=lfs -text
 *.next/cache/webpack/client-development/4.pack filter=lfs diff=lfs merge=lfs -text
 *4.pack filter=lfs diff=lfs merge=lfs -text
+*.pack filter=lfs diff=lfs merge=lfs -text
